Fixed BUG#14498: Stored procedures: hang if undefined variable and exception   The problem was to continue at the right place in the code after the   test expression in a flow control statement fails with an exception   (internally, the test in sp_instr_jump_if_not), and the exception is   caught by a continue handler. Execution must then be resumed after the   the entire flow control statement (END IF, END WHILE, etc).